force-app/main/default/objects/Temporary_Contact__c/Temporary_Contact__c.object-meta.xml
<CustomObject>
    <description>NPN : Automate Onboarding DocuSign: This object stores the Key contacts template Data.</description>
    <label>Temporary Contact</label>
    <nameField>
        <label>Temporary_Contact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Temporary Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>