force-app/main/default/objects/Temporary_Contact__c/fields/Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Temporary Contacts</relationshipLabel>
    <relationshipName>Temporary_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>