force-app/main/default/objects/Temporary_Contact__c/fields/Action_Requested__c.field-meta.xml
<CustomField>
    <fullName>Action_Requested__c</fullName>
    <label>Action Requested</label>
    <length>255</length>
    <type>Text</type>
</CustomField>