force-app/main/default/objects/Temporary_Contact__c/fields/ContactId__c.field-meta.xml
<CustomField>
    <fullName>ContactId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Temporary Contacts</relationshipLabel>
    <relationshipName>Temporary_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>