force-app/main/default/objects/Temporary_Contact__c/fields/Reason_for_Deactivation_Deletion__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Deactivation_Deletion__c</fullName>
    <label>Reason for Deactivation / Deletion</label>
    <type>TextArea</type>
</CustomField>