force-app/main/default/objects/Temporary_Contact__c/fields/Requested_By__c.field-meta.xml
<CustomField>
    <fullName>Requested_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Community user who requests for contact updates.</description>
    <label>Requested By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Temporary_Contacts_Requestors</relationshipName>
    <type>Lookup</type>
</CustomField>