force-app/main/default/objects/Temporary_Contact__c/listViews/Contact_Requests.listView-meta.xml
<ListView>
    <fullName>Contact_Requests</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Email__c</columns>
    <columns>Action_Requested__c</columns>
    <columns>Reason_for_Deactivation_Deletion__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Status__c</columns>
    <columns>Region__c</columns>
    <filterScope>Everything</filterScope>
    <label>Contact Requests</label>
    <language>en_US</language>
</ListView>