force-app/main/default/objects/Temporary_Contact__c/listViews/Partner_Contact_Request_Approvers_Temporary_Contact.listView-meta.xml
<ListView>
    <fullName>Partner_Contact_Request_Approvers_Temporary_Contact</fullName>
    <filterScope>Queue</filterScope>
    <label>Partner Contact Request Approvers</label>
    <queue>Partner_Contact_Request_Approvers</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>